--- a/client/main.css
+++ b/client/main.css
@@ -53,15 +53,14 @@ div {
 }
 
 .nav-button {
-    color: #f0494b;
-    background-color: #0177c1;
+    color: #f1f4f0;
+    background-color:#f0494b;
     border-color: #f0494b;
     border: 2px solid #f0494b;
 }
 
 .nav-button:hover {
-    color: #0177c1;
-    background-color:#f0494b;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .nav-link:hover {
@@ -95,29 +94,75 @@ hr {
 }
 
 .event-btn {
-    color: #0796db;
-    border-color: #0796db;
+    background-color: #0796db;
+    color: #f1f4f0;
     border: 2px solid #0796db;
-    margin: 5px;
+    margin: 10px;
+    border-radius: 5px;
+    padding: 6px 12px 6px 12px;
 }
 
 .event-btn:hover {
-    background-color: #0796db;
-    color: #f1f4f0
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .new-event-btn {
-    color: #f0494b;
-    border-color: #f0494b;
+    background-color: #f0494b;
+    color: #f1f4f0;
     border: 2px solid #f0494b;
     margin: 5px;
 }
 
 .new-event-btn:hover {
-    background-color: #f0494b;
-    color: #f1f4f0
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .tickets {
     margin-top: 65px;
+}
+
+.ticket {
+    margin: 10px;
+    border: 2px solid #0796db;
+    border-radius: 5px;
+}
+
+.event-img {
+    padding: 20px;
+}
+
+.input-group {
+    padding: 15px;
+}
+
+.table-cell {
+    background-color: #71c6f9;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+}
+
+.bold-text {
+    font-weight: bold;
+}
+
+#dollar {
+    background-color: #f0494b;
+    color: #f1f4f0;
+    border: 1px solid #000000;
+}
+
+#bid-border {
+    border: 1px solid #000000;
+}
+
+.btn-close {
+    background-color: #6c757d;
+    color: #f1f4f0;
+    padding: 6px 12px 6px 12px;
+    border: 2px solid #6c757d;
+    margin: 5px;
+}
+
+.btn-close:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
